# StrideTrack

./: .cgcignore  .gitattributes  .gitignore  CLAUDE.md  CLAUDE_SETUP_GUIDE.md  DEPENDENCIES.md  README.md  W100H_DEMO_PG1_CLEAN.csv  W100H_DEMO_PG1_OUTLIERS.csv  docker-compose.otel.yml  docker-compose.yaml  makefile  package-lock.json  package.json  processed_sprint1.csv  processed_sprint2.csv
backend/: .dockerignore  .env.example  Dockerfile.dev  Dockerfile.prod  Dockerfile.test  README.md  TESTING.md  pyproject.toml  pytest.ini
backend/app/: api.py  main.py
backend/app/core/: auth.py  config.py  exception_handlers.py  exceptions.py  observability.py  observibility.py  supabase.py  supabase_check.py
backend/app/repositories/: all_repositories.py  athlete_repository.py  bosco_repository.py  csv_repository.py  data_repository.py  event_history_repository.py  example_repository.py  hurdle_repository.py  long_jump_repository.py  reaction_time_repository.py  run_repository.py  split_score_repository.py  triple_jump_repository.py
backend/app/routes/: athlete_routes.py  athletes.py  auth_routes.py  bosco_routes.py  coaches.py  csv_routes.py  data_routes.py  event_history_routes.py  events_routes.py  example_routes.py  feedback_routes.py  hurdle_routes.py  hurlde_routes.py  long_jump_routes.py  reaction_time_routes.py  run_routes.py  split_score_routes.py  sprint_metric_routes.py  training_runs.py  triple_jump_routes.py  universal_metric_routes.py
backend/app/schemas/: all_schemas.py  athlete_schemas.py  bosco_schemas.py  coach_schemas.py  csv_schemas.py  event_history_schemas.py  event_schemas.py  event_type.py  example_schemas.py  health_schemas.py  hurdle_schemas.py  long_jump_schemas.py  profile_schemas.py  reaction_time_schemas.py  run_schemas.py  split_score_schemas.py  triple_jump_schemas.py  user_schema.py
backend/app/services/: all_services.py  athlete_service.py  bosco_service.py  csv_service.py  data_service.py  event_history_service.py  example_service.py  feedback_service.py  hurdle_service.py  hurdle_visualization_routes.py  long_jump_service.py  reaction_time_service.py  run_service.py  split_score_service.py  sprint_metric_service.py  transform_run.py  triple_jump_service.py  universal_metric_service.py
backend/app/utils/: bosco_transformaitions.py  bosco_transformations.py  chart_transformations.py  event_display_names.py  example_utils.py  hurdle_chart_transformations.py  (+15 more)
backend/tests/: conftest.py
(+403 files in other folders)
